create new comment

--- a/app/views/cards/show.html.erb
+++ b/app/views/cards/show.html.erb
@@ -22,7 +22,8 @@
       <td><%= @card.updated_at %></td>
     </tr>
   </tbody>
-  
+  <%= link_to 'Add comment',  comments_new_path %>
+  <br />
   <%= link_to 'Back', board_list_cards_path %>
 
 </table>
