--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -1,2 +1,16 @@
-<h1>Comments#edit</h1>
-<p>Find me in app/views/comments/edit.html.erb</p>
+<div class = "Comment Update">
+  
+  <h1>Update Comment</h1>
+  
+  <%= form_for(@comment) do |f| %>
+    <%= render(:partial => 'form', :locals => {:f => f}) %>
+    
+    <div class = "form-buttons">
+      <%= f.submit("Update Comment")%>
+    </div>
+  
+  <%end%>
+  
+  <%= link_to 'Back', comments_path %>
+
+</div>
