--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -1,2 +1,8 @@
-<h1>Comments#index</h1>
-<p>Find me in app/views/comments/index.html.erb</p>
+<h1>All Comments</h1>
+<% @comments.each do |comment| %>
+    
+  <p><%= comment.text %></p>
+             
+<% end %>
+    
+<%= link_to "Add Comment",new_comment_path , class:"nav-link" %>      
