--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,6 +1,6 @@
 <div class = "Comment new">
   <h1>Add new Comment</h1>
-  <%= form_for(@comment) do |f| %>
+  <%= form_for([@board,@list,@card, @comment]) do |f| %>
     <%= render(:partial => 'form',:locals => {:f => f}) %>
     
     <div class = "form-buttons">
