--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -2,7 +2,7 @@
   
   <h1>Update Comment</h1>
   
-  <%= form_for(@comment) do |f| %>
+  <%= form_for([@board,@list,@card, @comment]) do |f| %>
     <%= render(:partial => 'form', :locals => {:f => f}) %>
     
     <div class = "form-buttons">
@@ -11,6 +11,6 @@
   
   <%end%>
   
-  <%= link_to 'Back', comments_path %>
+  
 
 </div>
