authorize cards  and comments

--- a/app/views/cards/index.html.erb
+++ b/app/views/cards/index.html.erb
@@ -54,7 +54,7 @@
     <tbody>
       <% @my_tasks.each do |task| %>
         <tr>
-          <td><%= task.username %></td>
+          <td><%= task.list.board.user.username %></td>
           <td><%= task.name %></td>
           <td><%= link_to 'Show', board_list_card_path(task.list.board_id, task.list_id, task) %></td>
         </tr>  
