--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -10,7 +10,7 @@
     <div class = "collapse navbar-collapse" id = "navbarSupportedContent">
       <ul class = "navbar-nav me-auto mb-2 mb-lg-0">
         
-        <%if user_signed_in?%>
+        <%if user_signed_in? %>
           
           <li class = "nav-item">
             <%= link_to "Sign Out", destroy_user_session_path, method: :delete, class:"nav-link" %>
@@ -27,6 +27,11 @@
           <li class = "nav-item">
             <%= link_to "Assign Tasks",new_task_path, class:"nav-link" %>
           </li>
+          <li class = "nav-item">
+            
+            <%= link_to "Signed in as #{current_user.username || current_user.email }","#", class:"nav-link" %>
+          </li>
+        
         
         <%else%>
           
@@ -38,6 +43,8 @@
           </li>
         
         <%end%>
+        
+
       </ul>
     </div>
   </div>
