add rolify gem in and set routes according to role

--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -15,6 +15,9 @@
           <li class = "nav-item">
             <%= link_to "Sign Out", destroy_user_session_path, method: :delete, class:"nav-link" %>
           </li>
+          <li class = "nav-item">
+            <%= link_to "#{current_user.roles.pluck(:name)}", "#", class:"nav-link" %>
+          </li>
           
           <li class = "nav-item">
             <%= link_to "Edit Profile", edit_user_registration_path, class:"nav-link" %>
