--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -12,30 +12,35 @@
         
         <%if user_signed_in? %>
           
+          <%if current_user.has_role? :admin %>
+            <li class = "nav-item">
+              <%= link_to "View Users", admin_index_path, class:"nav-link" %>
+            </li>
+            
+            
+
+            
+            
+          <%end%>
           <li class = "nav-item">
-            <%= link_to "Sign Out", destroy_user_session_path, method: :delete, class:"nav-link" %>
+              <%= link_to "#{current_user.roles.pluck(:name)}", "#", class:"nav-link" %>
           </li>
           <li class = "nav-item">
-            <%= link_to "#{current_user.roles.pluck(:name)}", "#", class:"nav-link" %>
+              <%= link_to "Sign Out", destroy_user_session_path, method: :delete, class:"nav-link" %>
           </li>
-          
+            
+            
           <li class = "nav-item">
             <%= link_to "Edit Profile", edit_user_registration_path, class:"nav-link" %>
           </li>
-
           <li class = "nav-item">
-            <%= link_to "Invite User",new_user_invitation_path, class:"nav-link" %>
-          </li>
-
-          <li class = "nav-item">
-            <%= link_to "Assign Tasks",new_task_path, class:"nav-link" %>
+              <%= link_to "Invite User",new_user_invitation_path, class:"nav-link" %>
           </li>
           <li class = "nav-item">
-            
-            <%= link_to "Signed in as #{current_user.username || current_user.email }","#", class:"nav-link" %>
+              
+              <%= link_to "Signed in as #{current_user.username || current_user.email }","#", class:"nav-link" %>
           </li>
-        
-        
+          
         <%else%>
           
           <li class = "nav-item">
