--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -22,7 +22,7 @@
           <td><%= user.username %></td>
           <td><%= user.email %></td>
           <td><%= user.boards.count %></td>
-          <td><%= link_to "Reset Password", admin_reset_password_path(:id => user.id)%></td>
+          <td><%= link_to "Reset Password", admin_reset_password_path(user)%></td>
           <%if user.deactivated%>
             <td><%= link_to "Activate Account", admin_activate_path(user),  data: { confirm: "Are you sure?" }%></td>
           <%else%>
