--- a/app/views/admin/reset_password.html.erb
+++ b/app/views/admin/reset_password.html.erb
@@ -2,17 +2,17 @@
 <div class = "Password Reset">
   <h1> Reset Password </h1>
   
-  <%= form_for(@user, :url => admin_create_path(:id => @user.id) , :method => 'patch') do |f| %>
+  <%= form_for(@user, :url => admin_create_path , :method => 'patch') do |f| %>
     <table summary = "Password fields">
   
       <tr>
         <th> New Password </th>
-        <td> <%= f.text_area(:encrypted_password)%> </td>
+        <td> <%= f.text_area(:password)%> </td>
       </tr> 
     </table>
     
     <div class = "form-buttons">
-      <%= f.submit("Create Board") %>
+      <%= f.submit("Change") %>
     </div>
 
   <%end%>
