rename create method to change for password

--- a/app/views/admin/reset_password.html.erb
+++ b/app/views/admin/reset_password.html.erb
@@ -2,7 +2,7 @@
 <div class = "Password Reset">
   <h1> Reset Password </h1>
   
-  <%= form_for(@user, :url => admin_create_path , :method => 'patch') do |f| %>
+  <%= form_for(@user, :url => admin_change_path , :method => 'patch') do |f| %>
     <table summary = "Password fields">
   
       <tr>
