--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -26,7 +26,7 @@
           <%if user.deactivated%>
             <td><%= link_to "Activate Account", admin_activate_path(user),  data: { confirm: "Are you sure?" }%></td>
           <%else%>
-            <td><%= link_to "Deactivate Account", admin_deactivate_path(user), data: { confirm: "Are you sure?" }%></td>
+            <td><%= link_to "Deactivate Account", admin_activate_path(user), data: { confirm: "Are you sure?" }%></td>
           <%end%>
         </tr>  
       <% end %>
