add plan and subscription status to users

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,8 @@
 
   <body>
     <%=render('home/header')%>
-    
+    <%=current_user.plan%>
+    <%=current_user.subscription_status%>
     <div class="container">
       <br />
       <div class="container">
