--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -17,6 +17,9 @@
               <%= link_to "View Users", admin_index_path, class:"nav-link" %>
             </li>
             <li class = "nav-item">
+              <%= link_to "Stripe Customer ID :#{ current_user.stripe_customer_id}", "#", class:"nav-link" %>
+            </li>
+            <li class = "nav-item">
               <%= link_to "Plan :#{ current_user.plan}", "#", class:"nav-link" %>
             </li>
 
