--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -33,7 +33,9 @@
             <li class = "nav-item">
               <%= link_to "View Users", admin_index_path, class:"nav-link" %>
             </li>
-            
+            <li class = "nav-item">
+              <%= link_to "Add Product", new_product_path, class:"nav-link" %>
+            </li>
             
           <%end%>
           <li class = "nav-item">
