--- a/app/views/price/index.html.erb
+++ b/app/views/price/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Pricing</h1>
+<!--- <h1>Pricing</h1>
 <br />
 <%@pricing=Stripe::Price.list(lookup_keys: ["good year" , "good month"],
 expand: ["data.product"])%>
@@ -8,5 +8,14 @@ expand: ["data.product"])%>
   <%=price.currency%>/
   <%=price.recurring.interval%>
   <%= link_to 'Checkout', checkout_path(price: price.id), method: :post, remote: true %></td>
+  <br />
+<%end%>
+--->
+<%Price.all.each do |price|%>
+  <%=price.product.name%>
+  <%=price.unit_amount%>
+  <%=price.currency%>/
+  <%=price.recurring_interval%>
+  <%= link_to 'Checkout', checkout_path(price: price.stripe_price_id), method: :post, remote: true %></td>
   <br />
 <%end%>
