show all prices on index page

--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -18,6 +18,9 @@
             <%= link_to 'Billing Portal', billing_portal_path, class:"nav-link", method: :post %>
           </li>
           <li class = "nav-item">
+            <%= link_to " Pricing Plan", prices_path, class:"nav-link" %>
+          </li>
+          <li class = "nav-item">
             <%= link_to "Subscription Pricing", price_index_path, class:"nav-link" %>
           </li>
           <li class = "nav-item">
