--- a/app/views/payments/new.html.erb
+++ b/app/views/payments/new.html.erb
@@ -17,8 +17,13 @@
         Country:
         <%=f.text_field(:country)%>
         <br / ><br / >
-        Card:
         <div id="card-element">
+        <!-- Elements will create form elements here -->
+        </div>
+        <br / ><br / >
+        Postal Code:
+        <div id="postal-code">
+          <%=f.text_field(:country)%>
         <!-- Elements will create form elements here -->
         </div>
         <div id="card-errors", role="alert">
@@ -46,8 +51,15 @@
     };
 
     var cardNumberElement = document.getElementById("card-element");
+    var tempPostalCode=document.getElementById("postal-code");
     const paymentElement = elements.create('payment');
-    paymentElement.mount(cardNumberElement);
+    const postalCode=elements.create('postalCode')
+    paymentElement.mount(cardNumberElement);  /* we can also write "#card-element" instead of cardNumberElement.. because card-element is in form <div id="card-element">
+        </div>... payment intent must be created before creating payment element like elements.create('payment').. and pass payment intent
+        to clientsecret like->.. const options = {
+      clientSecret: "pi_3Jzgv9Gx183h7tz10SRviCyY_secret_hhyoewmmiLQsbSUp2AMiEsu9k"
+    }; */ 
+    postalCode.mount(tempPostalCode)
     </script>
   </body>
   
