--- a/app/views/prices/index.html.erb
+++ b/app/views/prices/index.html.erb
@@ -15,6 +15,7 @@
         <span><%=price.recurring_interval%></span>
     </label>
     <%= link_to "Subscribe",subscription_path(price) , class:"nav-link" %>
+    <%=link_to "Payment", payment_new_path(price)%>
   <%end%>
 </article>
 
