--- a/app/views/payments/new.html.erb
+++ b/app/views/payments/new.html.erb
@@ -1,13 +1,28 @@
+<%intent=Stripe::PaymentIntent.create(
+  amount: Price.find(params[:id]).unit_amount*100,
+  currency: 'usd',
+  payment_method_types: [
+    #'bancontact',
+    'card',
+    #'eps',
+    #'giropay',
+    #'ideal',
+    #'p24',
+    #'sepa_debit',
+    #'sofort',
+    
+  ],
+)%>
 <html lang="en">
   <head>
   <script src="https://js.stripe.com/v3/"></script>
-  
+  <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
   </head>
   <body>
     <div class = "Payment new">
       <h1> Stripe Payment </h1>
       
-      <%=form_for(@payment) do |f| %>
+      <%=form_for(@payment, :url => payments_path(:id=>params[:id]), :html => {:id => "payment-form"}) do |f| %>
         Name:
         <%=f.text_field(:name)%>
         <br / ><br / >
@@ -39,11 +54,11 @@
     
     <script type="text/javascript">
 
-    const options = {
+    /*const options = {
       clientSecret: "pi_3Jzgv9Gx183h7tz10SRviCyY_secret_hhyoewmmiLQsbSUp2AMiEsu9k"
-    };
+    };*/
       var stripe=Stripe('pk_test_51Jw29PGx183h7tz1vCKbiozJIc5B8Zjx1aFAKed2v1Kb25Vshxt4PIWXHHLlhCL7d6vkVL60i1Xbuv5ncGbNoXaK00vBB66Zf7');
-      var elements=stripe.elements(options);
+      var elements=stripe.elements();/*(options);*/
       var style = {
       base: {
         color: "#32325d",
@@ -72,7 +87,43 @@
       }
     });
 
-    </script>
+  var form = document.getElementById('payment-form');
+  form.addEventListener('submit', function(ev) {
+    ev.preventDefault();
+    stripe.confirmCardPayment('<%=intent.client_secret;%>', {
+      payment_method: {
+        card: cardElement,
+        billing_details: {
+          name: 'Komal Abid'
+        }
+      }
+    }).then(function(result) {
+      if (result.error) {
+        // Show error to your customer (e.g., insufficient funds)
+        console.log(result.error.message);
+        $('#card-errors').text(result.error.message);
+      } else {
+        // The payment has been processed!
+        if (result.paymentIntent.status === 'succeeded') {
+          
+          // Show a success message to your customer
+          // There's a risk of the customer closing the window before callback
+          // execution. Set up a webhook or plugin to listen for the
+          // payment_intent.succeeded event that handles any business critical
+          // post-payment actions.
+
+            console.log(result);
+                
+
+          $('#card-errors').text('Payment Completed');
+
+        }
+      }
+    });
+});
+
+
+  </script>
   </body>
   
 </html>
